logs/watchdog_20251013_0700.log
[13/10/2025  7:00:01,69] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[13/10/2025  7:00:01,98] END WATCHDOG 
